Thu May 22 21:25:34 UTC 2014  Jeff Schmitz  <schmitzj@ociweb.com>

        * dds/DCPS/DataReaderImpl.cpp:

          In add_association, acquire writers_lock_ to access
          writers_, instead of sample_lock_

Thu May 22 20:52:53 UTC 2014  Jeff Schmitz  <schmitzj@ociweb.com>

        * dds/DCPS/DataWriterImpl.cpp:

          Only send END_HISTORiC_SAMPLES if durable.

Thu May 22 13:56:00 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>

        * tests/DCPS/ManyToMany/DataReaderListener.cpp:

          Improved error reporting.

Wed May 21 20:34:12 UTC 2014  Jeff Schmitz  <schmitzj@ociweb.com>

        * dds/DCPS/DataReaderImpl.cpp:
        * dds/DCPS/RecorderImpl.cpp:
        * dds/DCPS/WriterInfo.h:
        * dds/DCPS/WriterInfo.cpp:

          Check reader qos in WriterInfo to verify both reader and writer
          have durability set.

        * dds/DCPS/transport/rtps_udp/RtpsSampleHeader.cpp:

          Correct log message.

Tue May 20 21:45:16 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>

        * tests/DCPS/ManyToMany/DataReaderListener.h:
        * tests/DCPS/ManyToMany/DataReaderListener.cpp:
        * tests/DCPS/ManyToMany/Options.h:

          Added flag to not validate the received messages to avoid
          having growing storage.

Tue May 20 18:53:48 UTC 2014  Jeff Schmitz  <schmitzj@ociweb.com>

        * dds/DCPS/DataReaderImpl.cpp:

          Release sample lock before aquiring writers lock.

Tue May 20 16:21:52 UTC 2014  Jeff Schmitz  <schmitzj@ociweb.com>

        * dds/DCPS/PublisherImpl.cpp:
        * dds/DCPS/SubscriberImpl.cpp:

          Check if servant is null before calling set_deleted.

Mon May 19 22:01:40 UTC 2014  Peter Oschwald  <oschwald_p@ociweb.com>

        * dds/DCPS/PublisherImpl.cpp:
        * dds/DCPS/SubscriberImpl.cpp:

          When deleting a data reader or writer, set_deleted(true) so
          that DataReaderImpl and DataWriterImpl will see that the
          entity is deleted in add_association check.
