@@ -26,12 +26,9 @@ public:
 
   bool is_finished() const;
 
-  int get_timeout_writes() const;
-
 private:
   DDS::DataWriter_var writer_;
   ACE_Atomic_Op<ACE_SYNCH_MUTEX, int> finished_instances_;
-  ACE_Atomic_Op<ACE_SYNCH_MUTEX, int> timeout_writes_;
 };
 
 #endif /* WRITER_H */
